crates/lang-parse/tests/snapshots/tokenizer__lexer_multi-line string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..18,
        token: LiteralString(
            "plain\n    string",
        ),
    },
]
