crates/lang-parse/tests/snapshots/tokenizer__lexer_multiple comment.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..11,
        token: SingleLineComment(
            "// comment1",
        ),
    },
    SpannedToken {
        span: 11..16,
        token: Whitespace(
            "\n    ",
        ),
    },
    SpannedToken {
        span: 16..27,
        token: SingleLineComment(
            "// comment2",
        ),
    },
]
