crates/lang-parse/tests/snapshots/tokenizer__lexer_plain string in expr.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..1,
        token: Identifier(
            "a",
        ),
    },
    SpannedToken {
        span: 1..2,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 2..3,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 3..4,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 4..33,
        token: LiteralString(
            "plain string int expression",
        ),
    },
    SpannedToken {
        span: 33..34,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 34..35,
        token: OperatorAdd,
    },
    SpannedToken {
        span: 35..36,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 36..37,
        token: LiteralInt(
            "1",
        ),
    },
]
